--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,7 @@
-.body{
-  margin: 0px;
+body{
+  margin: 0;
 }
 /* general styles */
-.container{
-  width:70%;
-  margin-left: auto;
-  margin-right: auto;
-}
 
 .flex{
   display: flex;
@@ -39,7 +34,9 @@ hr{
 
 .head1 p{
 color: yellow;
-font-size: 30px;
+font-size: 33px;
+padding-top: 30px;
+padding-bottom: 1px;
 font-weight: bold;
 }
 
@@ -62,22 +59,20 @@ font-size: 14px;
   font-style: italic;
   font-weight: bold;
   height: 60px;
-  padding: 1px;
-  font-size:20px;
+  font-size:23px;
   font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   justify-content: center;
+  padding-bottom: 10px;
   background-color: rgb(177, 177, 177);
 }
 
 /* banner style*/
 .banner{
   background-image: url("../img/EM-business-matchmaking-software.jpg");
-  height: 400px;
-  padding-top: 100px;
-  padding-bottom: 50px;
+  height: 500px;
   background-size: cover;
   justify-content: flex-end;
-  padding-right: 10px;
+  padding:60px
 }
 
 .banner p{
@@ -90,8 +85,8 @@ font-size: 14px;
   background-color: white;
   opacity: 0.9;
   font-family:Verdana, Geneva, Tahoma, sans-serif;
-  width:30%;
-  height: 50%;
+  width:25%;
+  height: 40%;
   margin-top: auto;
   margin-bottom: auto;
   padding-left: 40px;
@@ -103,7 +98,7 @@ font-size: 14px;
 }
 
 .banner button{
-  width:320px;
+  width:350px;
   height:40px;
   border:none;
   font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -146,9 +141,9 @@ font-size: 14px;
 }
 
 .select .item button{
-  width:300px;
+  width:455px;
   height:40px;
-  flex-wrap:wrap;
+  justify-content: center;
   border:none;
   font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size:20px;
@@ -166,7 +161,7 @@ font-size: 14px;
   color:white;
   background-color: black;
   height:40px;
-  font-size: 12px;
+  font-size: 16px;
   padding: 2px;
   align-items:center
 }
